# ed25519-donna

./: .gitlab-ci.yml  Makefile.am  Makefile.in  configure.ac  configure.in  ed25519-donna-impl-base.h  ed25519-donna-impl-sse2.h  ed25519-donna.h  ed25519-lib  ed25519-prims.c  ed25519-prims.h  ed25519.c  modm-donna-64bit.h
debian/: changelog  control
